@@ -3,6 +3,7 @@
 1. Fix starting chrome media session.
 2. If now-playing timer is 2 seconds or more past duration, refresh status.
 3. Refresh player status when app gets focus on mobile.
+4. If library_id is set, then pass down to all subsequent list commands.
 
 0.5.1
 -----
